verif/test/deca/context/invalid/object/repeated-name-verif.res
src/test/deca/context/invalid/object/repeated-name.deca:12:4: Method compute is already defined in current environment.
